--- a/index.html
+++ b/index.html
@@ -183,12 +183,14 @@
                 ></a>
               </li>
             </ul>
-
+            Phone: 
             <a href="tel:+966112054996" target="_blank"
-              >Phone: +966 11 205 4996</a
+              >+966 11 205 4996</a
             >
+            <br />
+            Email:
             <a class="mail" href="mailto:info@seaharvest.com.sa"
-              >Email: info@seaharvest.com.sa</a
+              > info@seaharvest.com.sa</a
             >
           </div>
         </li>
