--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <head>
     <meta charset="utf-8" />
-    <title>seaharvest</title>
+    <title>Sea Harvest Contracting Co</title>
     <!-- Behavioral Meta Data -->
     <meta content="yes" name="apple-mobile-web-app-capable" />
     <meta
@@ -85,7 +85,7 @@
 
         <li class="layer" data-depth="0.20">
           <div class="title">
-            <h2>Sea Harvest</h2>
+            <h2>Sea Harvest Contracting Co</h2>
             <span class="line"></span>
           </div>
         </li>
