--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
                 <a
                   class="linkedin"
                   href="https://www.linkedin.com/company/sea-harvest-contracting-co/"
-                  ><i class="fa fa-linkedin">https://www.linkedin.com/company/sea-harvest-contracting-co/</i
-                ></a>
+                  ><i class="fa fa-linkedin"></i
+                ><span>https://www.linkedin.com/company/sea-harvest-contracting-co/</span></a>
               </li>
             </ul>
             Phone: 
