--- a/index.html
+++ b/index.html
@@ -180,8 +180,9 @@
                   class="linkedin"
                   href="https://www.linkedin.com/company/sea-harvest-contracting-co/"
                   ><i class="fa fa-linkedin"></i
-                ><span>https://www.linkedin.com/company/sea-harvest-contracting-co/</span></a>
+                ></a>
               </li>
+              <li><span>https://www.linkedin.com/company/sea-harvest-contracting-co/</span></li>
             </ul>
             Phone: 
             <a href="tel:+966112054996" target="_blank"
