--- a/index.html
+++ b/index.html
@@ -182,7 +182,10 @@
                   ><i class="fa fa-linkedin"></i
                 ></a>
               </li>
-              <li><span>https://www.linkedin.com/company/sea-harvest-contracting-co/</span></li>
+              <li><<a
+                  class="linkedin"
+                  href="https://www.linkedin.com/company/sea-harvest-contracting-co/"
+                  >https://www.linkedin.com/company/sea-harvest-contracting-co/</a></li>
             </ul>
             Phone: 
             <a href="tel:+966112054996" target="_blank"
