--- a/index.html
+++ b/index.html
@@ -183,10 +183,8 @@
                 ></a>
               </li>
               <li>
-                <a
-                  class="linkedin"
-                  href="https://www.linkedin.com/company/sea-harvest-contracting-co/"
-                  >
+                <a class="linkedin"
+                  href="https://www.linkedin.com/company/sea-harvest-contracting-co/">
                   https://www.linkedin.com/company/sea-harvest-contracting-co/
                 </a>
               </li>
