--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
                   </li> -->
 
-              <li>
+              <li style="margin: 0 -3rem">
                 <a
                   class="linkedin"
                   href="https://www.linkedin.com/company/sea-harvest-contracting-co/"
@@ -184,7 +184,8 @@
               </li>
               <li>
                 <a class="linkedin"
-                  href="https://www.linkedin.com/company/sea-harvest-contracting-co/">
+                  href="https://www.linkedin.com/company/sea-harvest-contracting-co/"
+                  style="width:50rem" >
                   https://www.linkedin.com/company/sea-harvest-contracting-co/
                 </a>
               </li>
